--- a/example/demo/pubspec.yaml
+++ b/example/demo/pubspec.yaml
@@ -1,5 +1,5 @@
 name: demo
-description: "A new Flutter project."
+description: 'A new Flutter project.'
 publish_to: 'none'
 version: 0.1.0
 
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0
+  intl: ^0.20.2
   zeatmap:
     path: ../../../zeatmap
 
